# gipZstd

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
src/: gipZstd.cpp  gipZstd.h
